Revert "Qqq"