@@ -21,12 +21,10 @@ package org.netbeans.modules.learning.prepare;
 import com.google.gson.Gson;
 import java.io.IOException;
 import java.io.InputStream;
-import java.io.InputStreamReader;
 import java.io.OutputStream;
 import java.io.OutputStreamWriter;
 import java.io.UncheckedIOException;
 import java.io.Writer;
-import java.nio.charset.StandardCharsets;
 import java.nio.file.DirectoryStream;
 import java.nio.file.FileVisitOption;
 import java.nio.file.Files;
@@ -40,7 +38,6 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Map.Entry;
-import java.util.TreeMap;
 import java.util.jar.JarOutputStream;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
@@ -58,7 +55,7 @@ public class PrepareBundles {
         "License.txt",
         "LICENSE.md"
     };
-    private static final String nl = "\n";
+    private static final String nl = System.getProperty("line.separator");
 
     public static void main(String... args) throws IOException, InterruptedException, NoSuchAlgorithmException {
         if (args.length != 2) {
@@ -95,8 +92,8 @@ public class PrepareBundles {
 
         Map<List<String>, LicenseUses> tokens2Projects = new HashMap<>();
         Map<String, LicenseDescription> project2License = new HashMap<>();
-        Map<String, String> binaries = new TreeMap<>();
-        try (DirectoryStream<Path> ds = Files.newDirectoryStream(packagesDir.resolve("node_modules"))) {
+        try (DirectoryStream<Path> ds = Files.newDirectoryStream(packagesDir.resolve("node_modules"));
+             Writer binariesList = new OutputStreamWriter(Files.newOutputStream(bundlesDir.resolve("binaries-list")), "UTF-8")) {
             for (Path module : ds) {
                 if (".bin".equals(module.getFileName().toString())) continue;
                 Path packageJson = module.resolve("package.json");
@@ -117,9 +114,9 @@ public class PrepareBundles {
                 if (license == null) {
                     throw new IllegalStateException("Cannot find license for: " + module.getFileName());
                 }
-
+                
                 Path thirdpartynoticestxt = module.resolve("thirdpartynotices.txt");
-                String packageJsonText = readFileIntoString(packageJson);
+                String packageJsonText = Files.readString(packageJson);
                 Map<String, Object> packageJsonData = new Gson().fromJson(packageJsonText, HashMap.class);
                 String name = (String) packageJsonData.get("name");
                 String version = (String) packageJsonData.get("version");
@@ -130,12 +127,12 @@ public class PrepareBundles {
 
                 if (Files.isReadable(thirdpartynoticestxt)) {
                     licenseText = "Parts of this work are licensed:\n" +
-                                  readFileIntoString(license) +
+                                  Files.readString(license) +
                                   "\n\n" +
                                   "Parts of this work are licensed:\n" +
-                                  readFileIntoString(thirdpartynoticestxt);
+                                  Files.readString(thirdpartynoticestxt);
                 } else {
-                    licenseText = readFileIntoString(license);
+                    licenseText = Files.readString(license);
                 }
 
                 List<String> tokens = licenseTextToTokens(licenseText);
@@ -166,24 +163,19 @@ public class PrepareBundles {
                     });
                 }
                 MessageDigest md = MessageDigest.getInstance("SHA1");
-                md.update(Files.readAllBytes(bundle));
+                try (InputStream in = Files.newInputStream(bundle)) {
+                    md.update(in.readAllBytes());
+                }
                 StringBuilder hash = new StringBuilder();
                 for (byte b : md.digest()) {
                     hash.append(String.format("%02X", b));
                 }
                 Path external = externalDir.resolve(hash + "-" + bundle.getFileName());
                 Files.copy(bundle, external);
-                binaries.put(bundle.getFileName().toString(), hash.toString());
+                binariesList.write(hash + " " + bundle.getFileName().toString() + nl);
             }
         }
-
-        try(Writer binariesList = new OutputStreamWriter(Files.newOutputStream(bundlesDir.resolve("binaries-list")), "UTF-8")) {
-            binariesList.write(readResourceIntoString("ALv2Header.txt"));
-            for(Entry<String,String> e: binaries.entrySet()) {
-                binariesList.write(e.getValue() + " " + e.getKey() + nl);
-            }
-        }
-
+        
         Map<String, String> project2LicenseKey = new HashMap<>();
 
         Map<List<String>, String> knownLicenseTokens2LicenseKey = new HashMap<>();
@@ -191,7 +183,7 @@ public class PrepareBundles {
 
         try (DirectoryStream<Path> ds = Files.newDirectoryStream(nb_all.resolve("nbbuild").resolve("licenses"))) {
             for (Path license : ds) {
-                knownLicenseTokens2LicenseKey.put(licenseTextToTokens(readFileIntoString(license)), license.getFileName().toString());
+                knownLicenseTokens2LicenseKey.put(licenseTextToTokens(Files.readString(license)), license.getFileName().toString());
             }
         }
 
@@ -223,28 +215,9 @@ public class PrepareBundles {
         }
     }
 
-    private static String readFileIntoString(Path file) throws IOException {
-        byte[] fileData = Files.readAllBytes(file);
-        return new String(fileData, StandardCharsets.UTF_8);
-    }
-
-    private static String readResourceIntoString(String path) throws IOException {
-        try(InputStream is = PrepareBundles.class.getResourceAsStream(path);
-            InputStreamReader isr = new InputStreamReader(is, StandardCharsets.UTF_8)) {
-            StringBuilder result = new StringBuilder();
-            char[] buffer = new char[2048];
-            int read;
-            while((read = isr.read(buffer)) >= 0) {
-                result.append(buffer, 0, read);
-            }
-            return result.toString();
-        }
-    }
-
     private static List<String> licenseTextToTokens(String licenseText) {
         return Arrays.asList(licenseText.replaceAll("[ \n\r\t]+", " ").split(" "));
     }
-
     private static class LicenseDescription {
         private final String name;
         private final String version;
@@ -269,7 +242,6 @@ public class PrepareBundles {
         }
 
     }
-
     private static class LicenseUses {
         private final String key;
         private final String licenseText;
@@ -279,5 +251,6 @@ public class PrepareBundles {
             this.key = key;
             this.licenseText = licenseText;
         }
+        
     }
 }
